--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -156,3 +156,47 @@ body {
   text-align: right;
   margin-top: 50px;
 }
+
+
+
+/* ボタンアニメーション(btn41-43 btn-41) ↓ */
+.btn41-43 {
+  padding: 10px 25px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  background: transparent;
+  outline: none !important;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+}
+.btn-41 {
+  border: 1px solid rgb(255, 255, 255);
+  z-index: 1;
+  color: white;
+}
+.btn-41:after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 100%;
+  top: 0;
+  left: 0;
+  direction: rtl;
+  z-index: -1;
+  background: rgb(255, 255, 255);
+  transition: all 0.3s ease;
+}
+.btn-41:hover {
+  color: rgb(0, 0, 0);
+}
+.btn-41:hover:after {
+  left: auto;
+  right: 0;
+  width: 100%;
+}
+.btn-41:active {
+  top: 2px;
+}
+/* ボタンアニメーション(btn41-43 btn-41) ↑ */
